# tdz-c64-knowledge

./: .clinerules  .env  .env.example  .gitignore  ANOMALY_DETECTION.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPARISON_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CONTEXT.md  DOCKER.md  ENVIRONMENT_SETUP.md  EXAMPLES.md  FILE_INVENTORY.md  FINAL_CLEANUP_REPORT.md  FUTURE_IMPROVEMENTS.md  FUTURE_IMPROVEMENTS_2025.md  GUI_IMPROVEMENTS_SUMMARY.md  GUI_README.md  IMPROVEMENTS.md  INNOVATION_ROADMAP.md  MONITORING_SETUP.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATIONS_PHASE2.md  PROJECT_STATUS.md  QUICKSTART.md  QUICKSTART_UPDATED.md  README.md  README_REST_API.md  RELEASE_NOTES_v2.21.0.md  SUMMARIZATION.md  TESTING.md  TEST_REPORT.md  TODO.md  USER_GUIDE.md  WEB_MONITORING_GUIDE.md  WEB_SCRAPING_GUIDE.md  WIKI_ENHANCEMENT_PROGRESS.md  (+56 more)
.claude/: settings.local.json
.claude/commands/: remember.md
.github/workflows/: ci.yml  release.yml
.planning/: Phase4_PLAN.md
archive/cleanup-reports/: CLEANUP_SUMMARY.md  TEST_REPORT.md
archive/historical-docs/: FEATURES.md  FILE_VIEWER_IMPROVEMENTS.md  FUTURE_IMPROVEMENTS.md  PERFORMANCE.md  PERFORMANCE_IMPROVEMENTS.md  QUICK_WINS_SUMMARY.md  README_UPDATED.md  ROADMAP_v2.21.0.md  TODO.md
archive/release-notes/: RELEASE_NOTES_v2.20.0.md  RELEASE_NOTES_v2.22.0.md
archive/test-output/: run_phase2_tests.bat  test-wiki.bat  test_graph.gexf  test_graph.gml  test_graph.graphml  test_knowledge_graph.html
archive/utilities/: benchmark_url_monitoring.py  enable_semantic_search.py  setup_claude_desktop.py
docs/: ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  ENTITY_EXTRACTION.md  KNOWLEDGE_EXTRACTION.md  KNOWLEDGE_EXTRACTION_PLAN.md  MCP_INTEGRATION.md  MCP_TOOLS_REFERENCE.md  MIGRATION.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_TEMPORAL_ANALYSIS.md  POPPLER_SETUP.md  QUICKSTART.md  QUICK_START_IMPROVEMENTS.md  README.md  RELEASE_NOTES_v2.23.15.md  REST_API.md  ROADMAP.md  SECURITY.md  TOP_10_IMPROVEMENTS.md  TROUBLESHOOTING.md  WIKI_EXPORT_GUIDE.md  WIKI_EXPORT_SUMMARY.md  WIKI_IMPROVEMENTS_ULTRATHINK.md  WIKI_IMPROVEMENTS_V2.md  WIKI_NEXT_IMPROVEMENTS.md
utilities/: NOTIFICATIONS_SETUP.md  load_test_500.py  monitor_config.example.json  monitor_daily.py  monitor_weekly.py  notifications.py
