[project]
name = "tdz-c64-knowledge"
version = "1.0.0"
description = "MCP server for C64 documentation knowledge base"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pypdf>=4.0.0",
    "rank-bm25>=0.2.2",
    "nltk>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
semantic = [
    "sentence-transformers>=2.0.0",
    "faiss-cpu>=1.7.0",
]

[project.scripts]
tdz-c64-knowledge = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py", "cli.py"]
